
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "mlx-video"
dynamic = ["version"]
description = "MLX-Video is the best package for inference and finetuning of Image-Video-Audio generation models on your Mac using MLX."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.22.0",
    "numpy",
    "safetensors",
    "huggingface_hub",
    "transformers[tokenizers]",
    "tqdm",
    "opencv-python>=4.12.0.88",
    "Pillow>=10.3.0",
    "mlx-vlm",
    "rich>=14.2.0",
]
license = {text="MIT"}
authors = [
    {name = "Prince Canuma", email = "prince.gdt@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/Blaizzy/mlx-video"
Repository = "https://github.com/Blaizzy/mlx-video"
Issues = "https://github.com/Blaizzy/mlx-video/issues"

[project.scripts]
"mlx_video.generate" = "mlx_video.generate:main"
"mlx_video.convert" = "mlx_video.convert:main"
"ltx_trainer.train" = "ltx_trainer.scripts.train:app"
"mlx_video.train" = "mlx_video.mlx_trainer.trainer:main"
"mlx_video.precompute" = "mlx_video.mlx_trainer.precompute:main"

[tool.setuptools.packages.find]
include = ["mlx_video*", "ltx_core*", "ltx_pipelines*", "ltx_trainer*"]

[tool.setuptools.dynamic]
version = {attr = "mlx_video.version.__version__"}

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
trainer = [
    # MLX-only trainer dependencies (no PyTorch).
    "pyyaml>=6.0.1",
    "wandb>=0.19.11",
]
